# Guardian-Mesh-Low-Latency-AI-Safety-Gateway

frontend/src/: App.jsx
gateway/: Cargo.toml  Dockerfile  build.rs  compose.yaml
gateway/entity/: Cargo.toml
gateway/entity/src/entities/: user.rs
gateway/migration/: Cargo.toml
gateway/migration/src/: m20220101_000001_create_table.rs
gateway/proto/: threat_proto.proto
gateway/src/: main.rs
gateway/src/entities/: mod.rs  prelude.rs
gateway/src/entity/: malicious_prompts.rs  user.rs
gateway/src/handlers/: mod.rs  test_handler.rs  user_handlers.rs
gateway/src/handlers/auth_handlers/: login.rs  login_handler.rs  mod.rs  register.rs  register_handler.rs
gateway/src/handlers/prompt_hadlers/: prompt_hadler.rs
gateway/src/models/: mod.rs  user_models.rs
gateway/src/routers/: auth_route.rs  mod.rs  test_route.rs
gateway/src/routes/: auth_route.rs  mod.rs  prompt_router.rs  user_route.rs
gateway/src/security/: mod.rs  password_mngr.rs
gateway/src/server/: mod.rs  server.rs
gateway/src/services/: mod.rs  pii_masking.rs  threat_classification.rs
gateway/src/utils/: constants.rs  errors.rs  guards.rs  jwt.rs  mod.rs  password.rs
gateway/tests/: quick_dev.rs
ml_service/: main.py  ml_server_proto.proto
ml_service/classification/: classifiction_model.py  classify_prompts.py
pii_masking_service/: gen_proto.sh  main.py  pyproject.toml
pii_masking_service/model/: ner_model.py
pii_masking_service/server/: ner_server.py
proto/: ner_proto.proto
threat_classification/: Dockerfile  main.py  pyproject.toml
(+11 files in other folders)
