[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]

migration = { path = "migration" }



axum = { version = "0.8.9", features = ["macros"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.10", features = ["cors"] }
tracing = "0.1.44"
anyhow = "1.0"
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = "1.0.228"
argon2 = "0.5.3"
validator = "0.20.0"
chrono = "0.4.45"
rand_core = { version = "0.6", features = ["getrandom"] }
